[package]
name = "ambients"
version = "0.1.0"
authors = ["Mark Henderson <henderson.mark@gmail.com>"]
edition = "2018"
description = "Placeholder"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cid = "0.4.0"
multihash = "0.10.1"
asn1_der = "0.7.1"
rand = "0.7.3"
sha2 = "0.8.1"
# secp256k1 = "0.15.5"
zeroize = "1.1.0"
libsecp256k1 = "0.3.5"

[workspace]
members = [
    "crates/parser"
]
