[package]
name = "ambients-core"
version = "0.1.0"
authors = ["Mark Henderson <henderson.mark@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cid = "0.3.1"
multihash = "0.8.0"
ambients-parser = { path="../parser" }
lalrpop-util = "0.17.2"
