[package]
name = "jsparser"
version = "0.1.0"
authors = ["Mark Henderson <henderson.mark@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ratel = { git = "https://github.com/ratel-rust/ratel-core" }
serde_json = "1.0.40"
ambients-parser = { path = "../parser" }
toolshed = { version = "0.4", features = ["impl_serialize"] }

[dev-dependencies]
pretty_assertions = "0.6.1"
