[package]
name = "ambients-parser"
version = "0.1.0"
authors = ["Mark Henderson <henderson.mark@gmail.com>"]
edition = "2018"

build = "build.rs"

[build-dependencies]
lalrpop = { version = "0.18.1", features = ["lexer"] }

[dependencies]
lalrpop-util = "0.18.1"
regex = "1.5.5"

[dev-dependencies]
pretty_assertions = "0.6.1"
