[package]
name = "reducer"
version = "0.1.0"
authors = ["Mark Henderson <henderson.mark@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ambients-parser = { path = "../parser" }

[dev-dependencies]
pretty_assertions = "0.6.1"
